--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@material/typography": "^14.0.0",
+    "@smui/select": "^7.0.0-beta.9",
     "@smui/textfield": "^7.0.0-beta.9"
   },
   "devDependencies": {
