--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "@material/typography": "^14.0.0",
     "@smui/select": "^7.0.0-beta.9",
-    "@smui/textfield": "^7.0.0-beta.9"
+    "@smui/textfield": "^7.0.0-beta.9",
+    "@smui/tooltip": "^7.0.0-beta.9"
   },
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^2.0.4",
